--- a/AdsLibrary/src/main/res/layout/gnt_small_template_view.xml
+++ b/AdsLibrary/src/main/res/layout/gnt_small_template_view.xml
@@ -6,23 +6,22 @@
     <com.google.android.gms.ads.nativead.NativeAdView
         android:id="@+id/native_ad_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:background="@drawable/gnt_outline_shape">
+            android:background="@drawable/gnt_outline_shape"
+            android:padding="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/background"
                 android:layout_width="@dimen/gnt_no_size"
                 android:layout_height="@dimen/gnt_no_size"
-                android:layout_marginStart="@dimen/gnt_default_margin"
-                android:layout_marginTop="@dimen/gnt_default_margin"
-                android:layout_marginEnd="@dimen/gnt_default_margin"
-                android:layout_marginBottom="@dimen/gnt_default_margin"
+                android:layout_marginStart="@dimen/gnt_no_size"
+                android:layout_marginTop="@dimen/gnt_no_size"
+                android:layout_marginEnd="@dimen/gnt_no_size"
+                android:layout_marginBottom="@dimen/gnt_no_size"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="H,4:1"
