removing 8 dp padding from small native ad

--- a/AdsLibrary/src/main/res/layout/gnt_small_template_view.xml
+++ b/AdsLibrary/src/main/res/layout/gnt_small_template_view.xml
@@ -11,8 +11,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/gnt_outline_shape"
-            android:padding="8dp">
+            android:background="@drawable/gnt_outline_shape">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/background"
